[gd_scene load_steps=6 format=3 uid="uid://4ckxi24wrjbb"]

[ext_resource type="Script" uid="uid://cuebhy71swxy3" path="res://scenes/npc.gd" id="1_6xvi5"]
[ext_resource type="StyleBox" uid="uid://dssymmq32r4ge" path="res://assets/ui/dialogue.tres" id="1_mhefn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iof21"]
albedo_color = Color(0.91806, 0.575202, 0.222449, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ucva2"]
radius = 0.533
height = 2.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.533
height = 2.4

[node name="NPC" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_6xvi5")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
material_override = SubResource("StandardMaterial3D_iof21")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ucva2")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Character" type="RichTextLabel" parent="Control"]
layout_mode = 2
anchor_left = 0.297656
anchor_top = 0.740278
anchor_right = 0.49375
anchor_bottom = 0.772222
offset_bottom = 0.000366211
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Research Employee"
metadata/_edit_use_anchors_ = true

[node name="Dialogue" type="RichTextLabel" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -259.5
offset_top = -164.0
offset_right = 259.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = ExtResource("1_mhefn")
text = "Dialogue"

[node name="Options" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 207.0
grow_vertical = 0

[node name="Option1" type="Button" parent="Control/Options"]
visible = false
layout_mode = 2
text = "Option1"

[node name="Option2" type="Button" parent="Control/Options"]
visible = false
layout_mode = 2
text = "Option2"

[node name="Option3" type="Button" parent="Control/Options"]
visible = false
layout_mode = 2
text = "Option3"

[node name="Option4" type="Button" parent="Control/Options"]
visible = false
layout_mode = 2
text = "Option4"

[connection signal="pressed" from="Control/Options/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="Control/Options/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="Control/Options/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="Control/Options/Option4" to="." method="_on_option_4_pressed"]
